Updated branding from rochester xamarin -> roc xam

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Rochester Xamarin Consulting">
 		<meta name="keywords" content="Xamarin Consulting Mobile App Development Software">
-		<meta name="author" content="Hoefling Software">
+		<meta name="author" content="Roc Xamarin">
 
-		<title>Rochester Xamarin Consulting</title>
+		<title>Rochester Xamarin Consulting - Roc Xam</title>
 
 		<!-- Favicon -->
 		<link href="assets/img/favicon.ico" rel="icon" type="image/x-icon">		
@@ -54,7 +54,7 @@
 						<div class="container">						
 							<div class="row text-center">								
 								<div class="col-md-12">
-									<h1>Rochester Xamarin<span class="dot">.</span></h1>
+									<h1>Roc Xam<span class="dot">.</span></h1>
 								</div>	
 							</div>
 
@@ -119,7 +119,7 @@
 		              <span class="icon-bar"></span>
 		            </button>
 		            <!-- Brand -->
-		            <a class="navbar-brand page-scroll logo" href="#page-top">Rochester Xamarin<span class="dot">.</span></a>
+		            <a class="navbar-brand page-scroll logo" href="#page-top">Roc Xam<span class="dot">.</span></a>
 		            <!-- End Brand -->
 		          </div>
 		          <div class="collapse navbar-collapse">
@@ -737,11 +737,11 @@
 				</div>
 	    		<div class="row top-pad">
 	    			<div class="col-md-4 wow fadeIn" data-wow-duration="1s" data-wow-delay=".2s">
-						<h3>Rochester Xamarin</h3>
+						<h3>Roc Xam</h3>
 						<h5><a href="https://www.hoeflingsoftware.com/" target="_blank">Hoefling Software, LLC</a></h5>
 	    				<p><span class="common-icon-style ti-location-pin"></span>30 Mulberry St, Rochester, NY, USA</p>
 	    				<p><span class="common-icon-style ti-mobile"></span>585 340 7163</p>
-	    				<p><span class="common-icon-style ti-email"></span>info@rochesterxamarin.com</p>
+	    				<p><span class="common-icon-style ti-email"></span>info@rocxam.com</p>
 	    			</div>
 	    			<div class="col-md-8 wow fadeIn" data-wow-duration="1s" data-wow-delay=".2s">
 	    				<form class="form-horizontal" method="post" action="https://hoeflingsoftware-functions.azurewebsites.net/api/contact?code=wlVqjYX64Rny9iJm6uOdJdpd11fL/WOX/dxEQYkaD7sjr6LewWAyog==">
