Updated top of page to display information about Xamarin and what the business does

--- a/index.html
+++ b/index.html
@@ -156,46 +156,97 @@
 		<section id="services">
 			<div class="container">
 				<div class="row text-center">
+						<div class="col-md-12">
+								<h2 class="headline wow fadeInDown">Enterprise Mobile Apps<span class="dot">.</span></h2>
+								<h4 class="fadeInUp">Made with &nbsp;<span class="services-icon-style ti-heart"></span>&nbsp; in Rochester, NY</h4>											
+						</div>
+					</div>
+					<div class="row top-pad">	
+						<div class="col-md-5">
+							<img src="assets/img/xamarin/live-mock-1.jpeg" alt="phone" class="img-responsive image_front center-block wow fadeInLeft" data-wow-duration="2s" data-wow-delay=".2s">
+						</div>
+						<div class="col-md-7">
+							<div class="features">
+								<h3 class="wow fadeInDown"><span class="common-icon-style ti-server"></span>Engineered with Xamarin</h3>
+								<p class="wow fadeIn">We utilize Xamarin as our platform for building mobile apps, this allows us to deliver iOS, Android and Windows apps on handheld and tablet devices which in turn saves our customers money. Xamarin uses enterprise technologies built by Microsoft which are designed to work with your business in any integration from simple shopping apps to advanced artificial intelligence apps.</p>
+							</div>	
+	
+							<div class="features">
+								<h3 class="wow fadeInDown"><span class="common-icon-style ti-mobile"></span>Mobile Apps</h3>
+								<p class="wow fadeIn">Custom designs that targets the mobile device or devices of your choice.</p>
+							</div>		
+	
+							<div class="features">
+								<h3 class="wow fadeInDown"><span class="common-icon-style ti-tablet"></span>Tablet Apps</h3>
+								<p class="wow fadeIn">Need an app to be built just for a tablet? Not a problem! Maybe your app needs to be built for both handheld mobile devices and a tablet, this is also not a problem.</p>
+							</div>		
+	
+							<div class="features">
+								<h3 class="wow fadeInDown"><span class="common-icon-style ti-hand-point-right"></span>Consulting Services</h3>
+								<p class="wow fadeIn">Is your organization starting a Xamarin Project but don't know where to begin? We offer on-site and remote Xamarin training from some of the best engineers and architetcs in the Xamarin community.</p>
+							</div>	
+						</div>
+	
+					</div>
+
+
+				<div class="row text-center">
 					<div class="col-md-12">					
-					 	<h2 class="headline wow fadeInDown">Offering<span class="dot">.</span></h2>
+					 	<h2 class="headline wow fadeInDown">Why Xamarin&nbsp;<span class="dot">?</span></h2>
 					 	<div class="custom-style"><span class="ti-announcement"></span></div>
 					</div>
 				</div>
 				<div class="row top-pad">
 					<div class="col-md-3 col-sm-6 text-center wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">
 						<div class="services">							
-							<span class="services-icon-style ti-heart"></span>
-							<h3>Personal Attention</h3>
-							<p>Every client gets one on one attention.</p>		
+							<span class="services-icon-style ti-pencil-alt"></span>
+							<h3>Shared Code</h3>
+							<p>One code base for all devices</p>		
 							<div class="divider center-block"></div>					
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 text-center wow fadeIn" data-wow-duration="1s" data-wow-delay=".5s">
 						<div class="services">							
 							<span class="services-icon-style ti-mobile"></span>
-							<h3>Device Agnostic</h3>
-							<p>Any device, any platform!</p>
+							<h3>Native Apps</h3>
+							<p>Access to device specific features</p>
 							<div class="divider center-block"></div>					
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 text-center wow fadeIn" data-wow-duration="1s" data-wow-delay=".7s">
 						<div class="services">							
-							<span class="services-icon-style ti-pencil-alt"></span>
-							<h3>Enterprise Code</h3>
-							<p>Perfect code, every time.</p>
+							<span class="services-icon-style ti-wallet"></span>
+							<h3>Cost Effective</h3>
+							<p>Save money, less development</p>
 							<div class="divider center-block"></div>					
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 text-center wow fadeIn" data-wow-duration="1s" data-wow-delay=".9s">
 						<div class="services">							
-							<span class="services-icon-style ti-support"></span>
-							<h3>Great Support</h3>
-							<p>Post Release bug? We will take care of it.</p>
+							<span class="services-icon-style ti-dashboard"></span>
+							<h3>Built for Enterprise</h3>
+							<p>C# runs your business</p>
 							<div class="divider center-block"></div>					
 						</div>
 					</div>
 				</div>
+				<div class="row top-pad text-center wow fadeIn" data-wow-duration="1s" data-wow-delay=".2s">
+					<div id="reviews-slider">						
+						<div class="item">
+							<div class="col-md-10 col-md-offset-1">								
+								<img src="assets/img/xamarin/1.png" alt="xamarin" class="img-responsive center-block">
+							</div>
+						</div>
+						<div class="item">
+							<div class="col-md-10 col-md-offset-1">								
+								<img src="assets/img/xamarin/2.png" alt="xamarin" class="img-responsive center-block">
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
+
+
 		</section>
 		<!-- End Services -->	
 
