--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					</div>
 					<div class="row top-pad">	
 						<div class="col-md-5">
-							<img src="assets/img/xamarin/live-mock-1.jpeg" alt="phone" class="img-responsive image_front center-block wow fadeInLeft" data-wow-duration="2s" data-wow-delay=".2s">
+							<img src="assets/img/xamarin/live-mock-1.jpeg" alt="business tablet app" class="img-responsive image_front center-block wow fadeInLeft" data-wow-duration="2s" data-wow-delay=".2s">
 						</div>
 						<div class="col-md-7">
 							<div class="features">
@@ -239,12 +239,12 @@
 					<div id="reviews-slider">						
 						<div class="item">
 							<div class="col-md-10 col-md-offset-1">								
-								<img src="assets/img/xamarin/1.png" alt="xamarin" class="img-responsive center-block">
+								<img src="assets/img/xamarin/1.png" alt="xamarin mobile app rochester ny" class="img-responsive center-block">
 							</div>
 						</div>
 						<div class="item">
 							<div class="col-md-10 col-md-offset-1">								
-								<img src="assets/img/xamarin/2.png" alt="xamarin" class="img-responsive center-block">
+								<img src="assets/img/xamarin/2.png" alt="xamarin mobile app rochester ny" class="img-responsive center-block">
 							</div>
 						</div>
 					</div>
@@ -267,7 +267,7 @@
 				<div class="row top-pad">
 
 					<div class="col-md-5">
-						<img src="assets/img/phone01.png" alt="phone" class="img-responsive image_front center-block wow fadeInLeft" data-wow-duration="2s" data-wow-delay=".2s">
+						<img src="assets/img/phone01.png" alt="enterprise mobile app" class="img-responsive image_front center-block wow fadeInLeft" data-wow-duration="2s" data-wow-delay=".2s">
 					</div>
 					<div class="col-md-7">
 						<div class="features">
@@ -326,13 +326,13 @@
 
 						<div id="features-slider">
 							<div class="item">
-								<img src="assets/img/phone02.png" alt="phone" class="img-responsive center-block">
+								<img src="assets/img/phone02.png" alt="business mobile app" class="img-responsive center-block">
 							</div>
 							<div class="item">		
-								<img src="assets/img/phone02.png" alt="phone" class="img-responsive center-block">
+								<img src="assets/img/phone02.png" alt="enterprise mobile app" class="img-responsive center-block">
 							</div>
 							<div class="item">	
-								<img src="assets/img/phone02.png" alt="phone" class="img-responsive center-block">
+								<img src="assets/img/phone02.png" alt="business mobile app" class="img-responsive center-block">
 							</div>	
 						</div>
 							
@@ -418,7 +418,7 @@
 
 						</div>					
 						<div class="col-md-6">
-							<img src="assets/img/phone03.jpg" alt="phone" class="img-responsive center-block wow fadeIn" data-wow-duration="2s" data-wow-delay=".2s">
+							<img src="assets/img/phone03.jpg" alt="business mobile app" class="img-responsive center-block wow fadeIn" data-wow-duration="2s" data-wow-delay=".2s">
 						</div>						
 					</div>
 						
