--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
 							<!-- Screenshot 5 -->
 							<div class="img-wrap">
-								<img class="img-responsive center-block" alt="screenshot5" src="assets/img/screenshots/thumbnails/hours-1.jpg">
+								<img class="img-responsive center-block" alt="Business Mobile App" src="assets/img/screenshots/thumbnails/hours-1.jpg">
 									<div class="overlay">
 										<a class="zoom" href="assets/img/screenshots/hours-1.jpg"></a>
 									</div>
@@ -487,7 +487,7 @@
 
 							<!-- Screenshot 6 -->
 							<div class="img-wrap">
-								<img class="img-responsive center-block" alt="screenshot6" src="assets/img/screenshots/thumbnails/login-1.jpg">
+								<img class="img-responsive center-block" alt="Mobile App Login" src="assets/img/screenshots/thumbnails/login-1.jpg">
 									<div class="overlay">
 										<a class="zoom" href="assets/img/screenshots/login-1.jpg"></a>
 									</div>
@@ -496,7 +496,7 @@
 
 							<!-- Screenshot 7 -->
 							<div class="img-wrap">
-								<img class="img-responsive center-block" alt="screenshot7" src="assets/img/screenshots/thumbnails/login-2.jpg">
+								<img class="img-responsive center-block" alt="Mobile App Login" src="assets/img/screenshots/thumbnails/login-2.jpg">
 									<div class="overlay">
 										<a class="zoom" href="assets/img/screenshots/login-2.jpg"></a>
 									</div>
@@ -505,9 +505,9 @@
 							
 							<!-- Screenshot 1 -->
 							<div class="img-wrap">
-								<img class="img-responsive center-block" alt="screenshot1" src="assets/img/screenshots/thumbnails/consultant-1.jpg">
+								<img class="img-responsive center-block" alt="Mobile App Image Gallery" src="assets/img/screenshots/thumbnails/image-gallery.jpg">
 									<div class="overlay">
-										<a class="zoom" href="assets/img/screenshots/consultant-1.jpg"></a>
+										<a class="zoom" href="assets/img/screenshots/image-gallery.jpg"></a>
 									</div>
 							</div>
 							<!-- End Screenshot 1 -->		
