--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 
 							<!-- Screenshot 2 -->
 							<div class="img-wrap">
-								<img class="img-responsive center-block" alt="screenshot2" src="assets/img/screenshots/thumbnails/calendar.jpg">
+								<img class="img-responsive center-block" alt="Mobile App" src="assets/img/screenshots/thumbnails/calendar.jpg">
 									<div class="overlay">
 										<a class="zoom" href="assets/img/screenshots/calendar.jpg"></a>
 									</div>
@@ -523,7 +523,7 @@
 
 							<!-- Screenshot 3 -->
 							<div class="img-wrap">
-								<img class="img-responsive center-block" alt="screenshot3" src="assets/img/screenshots/thumbnails/consultant-3.jpg">
+								<img class="img-responsive center-block" alt="Mobile App" src="assets/img/screenshots/thumbnails/consultant-3.jpg">
 									<div class="overlay">
 										<a class="zoom" href="assets/img/screenshots/consultant-3.jpg"></a>
 									</div>
@@ -532,7 +532,7 @@
 
 							<!-- Screenshot 4 -->
 							<div class="img-wrap">
-								<img class="img-responsive center-block" alt="screenshot4" src="assets/img/screenshots/thumbnails/consultant-4.jpg">
+								<img class="img-responsive center-block" alt="Mobile App" src="assets/img/screenshots/thumbnails/consultant-4.jpg">
 									<div class="overlay">
 										<a class="zoom" href="assets/img/screenshots/consultant-4.jpg"></a>
 									</div>
@@ -675,7 +675,7 @@
 						<!-- Pricing Table 3 -->
 						<div class="pricing-table wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s">
 							<div class="pricing-head">
-								<img src="assets/img/ribbon.png" alt="ribbon" class="img-responsive ribbon">
+								<img src="assets/img/ribbon.png" alt="Mobile App" class="img-responsive ribbon">
 								<h3>Enterprise</h3>
 								<!-- <h4>&dollar;300<small>/Month</small></h4> -->
 							</div>
@@ -729,7 +729,7 @@
 				<div class="row top-pad">
 					<div class="col-md-3 col-sm-6 text-center">
 						<!-- Team member 1 -->
-						<img src="assets/img/team/1.jpg" alt="team1" class="img-responsive center-block">
+						<img src="assets/img/team/1.jpg" alt="Xamarin Architect" class="img-responsive center-block">
 						<h3>Andrew Hoefling</h3>
 						<p>Xamarin Architect/Owner</p>
 						<ul class="list-inline margin-top-bottom-15">
@@ -743,7 +743,7 @@
 					</div>
 					<div class="col-md-3 col-sm-6 text-center">
 						<!-- Team member 2 -->
-						<img src="assets/img/team/2.jpg" alt="team2" class="img-responsive center-block">
+						<img src="assets/img/team/2.jpg" alt="Xamarin Developer" class="img-responsive center-block">
 						<h3>Will Smith</h3>
 						<p>Mobile Developer</p>
 						<ul class="list-inline margin-top-bottom-15">
@@ -756,7 +756,7 @@
 					<div class="col-md-3 col-sm-6 text-center">
 						<!-- Team member 3 -->
 						<!-- <img src="assets/img/team/3.jpg" alt="team3" class="img-responsive center-block"> -->
-						<img src="assets/img/team/3.jpg" alt="team3" class="img-responsive center-block">						
+						<img src="assets/img/team/3.jpg" alt="Xamarin Developer" class="img-responsive center-block">						
 						<h3>Flavio Santini</h3>
 						<p>Backend Developer</p>
 						<ul class="list-inline margin-top-bottom-15">
@@ -767,7 +767,7 @@
 					<div class="col-md-3 col-sm-6 text-center">
 						<!-- Team member 4 -->
 						<!-- <img src="assets/img/team/4.jpg" alt="team4" class="img-responsive center-block"> -->
-						<img src="assets/img/team/4.jpg" alt="team4" class="img-responsive center-block">
+						<img src="assets/img/team/4.jpg" alt="Xamarin Analyst" class="img-responsive center-block">
 						<h3>Steve Henn</h3>
 						<p>Business Analyst</p>
 						<ul class="list-inline margin-top-bottom-15">
