Updated Steve's linkedin

--- a/index.html
+++ b/index.html
@@ -771,10 +771,7 @@
 						<h3>Steve Henn</h3>
 						<p>Business Analyst</p>
 						<ul class="list-inline margin-top-bottom-15">
-							<li><a href="" target="_blank"><span class="social ti-linkedin"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-stack-overflow"></span></a></li>
-							<li><a href="" target="_blank"><span class="social ti-tumblr-alt"></span></a></li>
+							<li><a href="" target="https://www.linkedin.com/in/steven-henn-1220b5a/"><span class="social ti-linkedin"></span></a></li>
 						</ul>
 						<!-- End Team member -->
 					</div>
