Updating team members linkedin

--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 							<li><a href="https://stackoverflow.com/users/6040263/andrew-hoefling" target="_blank"><span class="social ti-stack-overflow"></span></a></li>
 							<li><a href="http://www.andrewhoefling.com/" target="_blank"><span class="social ti-rss"></span></a></li>
 							<li><a href="https://twitter.com/andrew_hoefling" target="_blank"><span class="social ti-twitter-alt"></span></a></li>
-							<li><a href="https://www.linkedin.com/in/andrew-hoefling-38324912/" target="_blank"><span class="social ti-linkedin"></span></a></li>
+							<li><a href="https://www.linkedin.com/in/andrew-hoefling/" target="_blank"><span class="social ti-linkedin"></span></a></li>
 						</ul>
 						<!-- End Team member -->	
 					</div>
@@ -771,7 +771,7 @@
 						<h3>Steve Henn</h3>
 						<p>Business Analyst</p>
 						<ul class="list-inline margin-top-bottom-15">
-							<li><a href="" target="https://www.linkedin.com/in/steven-henn-1220b5a/"><span class="social ti-linkedin"></span></a></li>
+							<li><a href="https://www.linkedin.com/in/Steve-Henn" target="_blank"><span class="social ti-linkedin"></span></a></li>
 						</ul>
 						<!-- End Team member -->
 					</div>
